<resources>
    <string name="app_name">Trust</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="pwChk">비밀번호 확인</string>
    <string name="signUp">회원가입</string>
    <string name="confirm">확인</string>
    <string name="login">로그인</string>
    <string name="autoLogin">자동 로그인</string>
    <string name="profileimage">profileImage</string>
    <string name="home">홈</string>
    <string name="board">게시판</string>
    <string name="chat">채팅</string>
    <string name="userInfo">내 정보</string>
    <string name="profile_image">프로필 사진</string>
    <string name="like">좋아요</string>
    <string name="comment">댓글 달기</string>
    <string name="chatting">채팅 하기</string>
    <string name="idError">아이디를 입력해주세요.</string>
    <string name="pwError">비밀번호를 입력해주세요.</string>
    <string name="input_comment">댓글을 입력하세요..</string>
    <string name="auto_login">자동 로그인</string>
    <string name="title">제목</string>
    <string name="unknown">익명</string>
    <string name="content">내용</string>
    <string name="add">추가</string>
    <string name="rewrite">글 수정하기</string>
    <string name="delete">글 삭제하기</string>
</resources>