<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="kr.hs.dgsw.trust.viewmodel.fragment.LoginViewModel"/>
        <variable
            name="vm"
            type="LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LoginFragment"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo"
                android:layout_marginVertical="50dp"
                app:layout_constraintBottom_toTopOf="@id/info_linear_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/info_linear_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_id_login"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_id_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.id}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pw_login"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pw">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pw_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.pw}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login_login"
                style="@style/BoldButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="65dp"
                android:stateListAnimator="@null"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/signUp_linear_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="회원이 아니신가요?" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_up_Login"
                    style="@style/NoPaddingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="?selectableItemBackground"
                    android:text="@string/signUp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>